Revision history for DBIx::Class

    * New Features
        - When using non-scalars (e.g. arrays) as literal bind values it is no
          longer necessary to explicitly specify a bindtype (this turned out
          to be a mostly useless overprotection)

    * Fixes
        - Another relatively invasive set of ::FilterColumn changes, covering
          potential data loss (RT#111567). Please run your regression tests!
        - Ensure failing on_connect* / on_disconnect* are dealt with properly,
          notably on_connect* failures now properly abort the entire connect
        - Fix use of ::Schema::Versioned combined with a user-supplied
          $dbh->{HandleError} (GH#101)
        - Fix parsing of DSNs containing driver arguments (GH#99)
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Fix spurious warning on MSSQL cursor invalidation retries (RT#102166)
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Fix leaktest failures with upcoming version of Sub::Quote
        - Really fix savepoint rollbacks on older DBD::SQLite (fix in 0.082800
          was not sufficient to cover up RT#67843)

    * Misc
        - Typo fixes from downstream debian packagers (RT#112007)

0.082821 2016-02-11 17:58 (UTC)
    * Fixes
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)